--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "framer-motion": "^3.2.1",
-    "next": "10.0.5",
+    "next": "^12.1.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.32.4"
