design rennovation started

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/client": "^3.3.3",
+    "@sanity/image-url": "^1.0.1",
     "framer-motion": "^3.2.1",
     "next": "^12.1.6",
     "react": "17.0.1",
