--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@sanity/client": "^3.3.3",
-    "@sanity/image-url": "^1.0.1",
+    "contentful": "^9.1.34",
     "framer-motion": "^3.2.1",
     "next": "^12.1.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-draggable": "^4.4.5",
     "sass": "^1.32.4"
   }
 }
